# template-bluenrg

./: .gitignore  CMakeLists.txt  README.md
cmake/: gcc.cmake  sdk.cmake
include/: BlueNRG1_conf.h  BlueNRG1_it.h  FreeRTOSConfig.h
ld/: BlueNRG2.ld
src/: BlueNRG1_it.c  main.c
